# tftui

./: .gitignore  .mise.toml  grid.css  pyproject.toml  run.py
src/tftui/: __init__.py  app.py  solutions.py  test.py  widgets.py
